# homekit-room-sync

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  docker-compose.yml  env.example  hacs.json  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  hacs.yml  release.yml
addon/: config.yaml
custom_components/homekit_room_sync/: __init__.py  bridge_manager.py  config_flow.py  const.py  coordinator.py  exposure.py  manifest.json  services.yaml  storage.py  strings.json
custom_components/homekit_room_sync/translations/: en.json
scripts/: deploy.sh
src/ha_export/: __init__.py  cli.py  main.py  models.py
src/ha_export/exporters/: areas.py  automations.py  base.py  dashboards.py  entities.py  helpers.py  lights.py  scenes.py  scripts.py
src/ha_export/utils/: api.py  fs.py  yaml.py
tests/: __init__.py  conftest.py  test_bridge_manager.py  test_cli.py  test_config_flow.py  test_coordinator.py  test_exporters.py  test_init.py  test_yaml_utils.py
tests/fixtures/api/: automation_autonomous_light.json  automations.json
tests/fixtures/config/: scripts.yaml
tests/fixtures/config/.storage/: core.area_registry  core.device_registry  core.entity_registry  input_boolean  input_select  light.group  lovelace-dashboard-main  scene.storage  script.storage
tests/ha_mocks/: __init__.py
tests/ha_mocks/homeassistant/: __init__.py  config_entries.py  core.py
tests/ha_mocks/homeassistant/helpers/: __init__.py  area_registry.py  config_validation.py  device_registry.py  entity_registry.py  event.py
