[tool.poetry]
name = "homekit-room-sync"
version = "0.0.1"
description = "Home Assistant custom integration to sync Areas with HomeKit Rooms"
authors = ["Lucas Crostarosa <lucas@crostamusic.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/lcrostarosa/homekit-room-sync"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.0"
mypy = "^1.5.0"
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
homeassistant = "^2024.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py311"
line-length = 88
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.isort]
known-first-party = ["custom_components.homekit_room_sync"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

