[tool.poetry]
name = "ha-config-exporter"
version = "0.1.0"
description = "Read-only Home Assistant configuration exporter with deterministic YAML output"
authors = ["ha-config-exporter maintainers <dev@ha-exporter.local>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/example/ha-config-exporter"
packages = [{ include = "ha_export", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
requests = ">=2.32"
PyYAML = ">=6.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.3"
ruff = ">=0.8"
mypy = ">=1.13"

[tool.poetry.scripts]
ha-export = "ha_export.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "C4",
    "UP",
    "ARG",
    "SIM",
]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["ha_export"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
